--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,7 +5,9 @@ name: Python application
 
 on:
   push:
-    branches: [ master ]
+    branches: [ dev ]
+    paths: 
+    - 'factorial.py' 
 jobs:
   build:
 
