--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,8 +23,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
-    - name: Lint with pylint
+        pip install pylint pytest
+    - name: Lint with pylint 
       run: |
         python lint.py
+    - name: Test with pytest
+      run: |
+        pytest pytest_test.py
   
