--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,7 +44,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.TEST_AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.TEST_AWS_SECRET_ACCESS_KEY }}
-        aws-region: 'us-east-1' 
+        aws-region: us-east-2 
 
     - name: Copy files to my S3 bucket
       run: |
