--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,20 +32,20 @@ jobs:
         pytest pytest_test.py
   
   deploy:
-    needs: build
+    name: Upload to Amazon S3
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Configure AWS credentials 
+    - name: Configure AWS credentials from Test account
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.TEST_AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.TEST_AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-2 
+        aws-region: us-east-1
 
-    - name: Copy files to my S3 bucket
+    - name: Copy files to the test website with the AWS CLI
       run: |
-        aws s3 cp factorial.py s3://factorial-taupirho
+        aws s3 sync . s3://factorial-taupirho
