--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,10 +24,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint pytest
-    - name: Lint with pylint 
+    - name: Lint with pylint! 
       run: |
         python lint.py
-    - name: Test with pytest
+    - name: Test with pytest!
       run: |
         pytest pytest_test.py
   
