--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint pytest
+        pip install pylint pytest black
+    - name: Format with Black
+      run: |
+        black --check lint.py
     - name: Lint with pylint! 
       run: |
         python lint.py
