--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,7 +29,7 @@ jobs:
         black --check lint.py
     - name: Lint with pylint! 
       run: |
-        python lint.py
+        pylint lint.py
     - name: Test with pytest!
       run: |
         pytest pytest_test.py
